--- a/style.css
+++ b/style.css
@@ -13,9 +13,12 @@ header{width: 100%;
      padding-top: 40px;
 }
 
+li:first-child{padding-left: 700px;}
+
 li{display:inline-block;
    font-size: 10px;
    padding: 10px;
+   
     
    }
 a{text-decoration: none;
